# learn-to-code-visual-assistant

./: .gitignore  README.md  contributing.md  gpt-transcripts.md  poetry.toml  pyproject.toml
re-video/: video_player.py
transcripts/: bm_gpt-transcript.md  jn_gpt-transcript.md
